grammar.js
    source_file: ($) =>
      seq(
        repeat(";"),
        repeat(choice(
          $.dot_command,
          seq($._statement, repeat1(";")),
        )),
        optional(choice($.dot_command, $._statement)),
      ),

    _statement: ($) =>
      choice(
        $.select_statement,
        $.insert_statement,
        $.update_statement,
        $.delete_statement,
        $.create_table_statement,
        $.create_index_statement,
        $.create_view_statement,
        $.create_trigger_statement,
        $.create_virtual_table_statement,
        $.alter_table_statement,
        $.drop_table_statement,
        $.drop_index_statement,
        $.drop_view_statement,
        $.drop_trigger_statement,
        $.attach_statement,
        $.detach_statement,
        $.pragma_statement,
        $.vacuum_statement,
        $.reindex_statement,
        $.analyze_statement,
        $.explain_statement,
        $.begin_statement,
        $.commit_statement,
        $.rollback_statement,
        $.savepoint_statement,
        $.release_statement,
      ),

    // -------------------- INSERT (parse.y lines 1024-1071) --------------------
    //
    // cmd ::= with insert_cmd INTO xfullname idlist_opt select upsert
    // cmd ::= with insert_cmd INTO xfullname idlist_opt DEFAULT VALUES returning
    // insert_cmd ::= INSERT orconf | REPLACE
    // orconf ::= empty | OR resolvetype
    // resolvetype ::= ROLLBACK | ABORT | FAIL | IGNORE | REPLACE
    //
    // Covers: INSERT|REPLACE INTO target [(cols)]
    //         (VALUES rows | SELECT | DEFAULT VALUES)
    //         [ON CONFLICT ...] [RETURNING ...] ;
    _indexed_by_clause: ($) =>
      choice(
        seq(alias(kw("indexed"), "INDEXED"), alias(kw("by"), "BY"), $._id),
        seq(alias(kw("not"), "NOT"), alias(kw("indexed"), "INDEXED")),
      ),

    where_clause: ($) =>
      seq(alias(kw("where"), "WHERE"), $._expression),

    order_by_clause: ($) =>
      seq(
        alias(kw("order"), "ORDER"),
        alias(kw("by"), "BY"),
        commaSep1($.order_term),
      ),

    // parse.y `sortlist` rule: `expr [ASC|DESC] [NULLS FIRST|NULLS LAST]`.
    // NULLS FIRST/LAST was added in sqlite 3.30.
    order_term: ($) =>
      seq(
        $._expression,
        optional(choice(
          alias(kw("asc"), "ASC"),
          alias(kw("desc"), "DESC"),
        )),
        optional(seq(
          alias(kw("nulls"), "NULLS"),
          choice(
            alias(kw("first"), "FIRST"),
            alias(kw("last"), "LAST"),
          ),
        )),
      ),

    limit_clause: ($) =>
      seq(
        alias(kw("limit"), "LIMIT"),
        $._expression,
        optional(seq(
          choice(alias(kw("offset"), "OFFSET"), ","),
          $._expression,
        )),
      ),

    // -------------------- SELECT (parse.y lines 570-690) --------------------
    //
    // The full SELECT grammar in parse.y is large — joins, compound
    // SELECT (UNION/INTERSECT/EXCEPT), CTEs (WITH RECURSIVE), window
    // functions, subqueries, table-valued functions, all covered.
    //
    // oneselect ::= SELECT distinct selcollist from where_opt
    //               groupby_opt having_opt orderby_opt limit_opt
    //
    // Core form:
    //   SELECT [DISTINCT|ALL] result-column-list
    //   [FROM qualified-table [AS? alias]]
    //   [WHERE expr]
    //   [GROUP BY expr-list [HAVING expr]]
    //   [ORDER BY order-term-list]
    //   [LIMIT expr [OFFSET expr | , expr]]
    //   ;
    delete_statement: ($) =>
      seq(
        optional(field("with", $.with_clause)),
        alias(kw("delete"), "DELETE"),
        alias(kw("from"), "FROM"),
        field("target", $.qualified_table_name),
        // parse.y `xfullname ::= nm DOT nm AS nm`: DELETE FROM accepts
        // an AS alias on the target table, used so a self-referential
        // EXISTS subquery can disambiguate (e.g. delete.test:412).
        optional(seq(
          optional(alias(kw("as"), "AS")),
          field("alias", $._id),
        )),
        optional($._indexed_by_clause),
        optional(field("where", $.where_clause)),
        optional(field("returning", $.returning_clause)),
        optional(field("order_by", $.order_by_clause)),
        optional(field("limit", $.limit_clause)),
      ),

    // -------------------- Table / column references --------------------

    // sqlite's `xfullname` rule supports schema.table and an optional
    // AS alias. AS aliases appear in SELECT and UPDATE-FROM contexts.
    //
    // Visible (not `_`-prefixed) so the `field("target", ...)`
    // wrappers in INSERT and UPDATE actually wrap a node — hidden
    // rules promote their fields up to the parent, which makes
    // `name:` and `schema:` appear at the statement level instead
    // of inside a `target:` subnode.
    qualified_table_name: ($) =>
      seq(
        optional(seq(field("schema", $._id), ".")),
        field("name", $._id),
      ),

    // -------------------- Expressions (parse.y lines 1119-1505) --------------------
    //
    // Full sqlite expression surface translated from parse.y. The
    // precedence table mirrors the %left/%right/%nonassoc directives
    // at parse.y lines 289-301. Postfix forms (IS NULL, BETWEEN, IN,
    // LIKE/GLOB/REGEXP/MATCH with optional ESCAPE, COLLATE) get the
    // same precedence as their parse.y rules, with explicit
    // [PRECEDENCE_TOKEN] annotations on the Lemon side translated to
    // tree-sitter prec.left/prec.right.
    //
    // Window/aggregate suffixes (WITHIN GROUP, FILTER, OVER, named
    // windows) and RAISE-in-trigger-body live with their respective
    // statement productions, not in the bare expression rule.
    _expression: ($) =>
      choice(
        $.numeric_literal,
        $.string_literal,
        $.blob_literal,
        $.null_literal,
        $.true_literal,
        $.false_literal,
        $.current_time_literal,
        $.bind_parameter,
        $.column_reference,
        // External-scanner-emitted poison tokens (src/scanner.c). These
        // appear in the tree wherever sqlite tokenize.c would have
        // emitted a malformed-token diagnostic. IDE consumers and our
        // harnesses treat these node types as parse failures.
        $.malformed_blob_literal,
        $.malformed_number_id,
        $.parenthesized_expression,
        $.tuple_expression,
        $.cast_expression,
        $.case_expression,
        $.function_call,
        $.subquery_expression,
        $.exists_expression,
        $.unary_expression,
        $.binary_expression,
        $.collate_expression,
        $.is_null_expression,
        $.is_expression,
        $.between_expression,
        $.in_list_expression,
        $.in_subquery_expression,
        $.in_table_expression,
        $.like_expression,
      ),

    column_reference: ($) =>
      choice(
        seq(
          field("schema", $._id),
          ".",
          field("table", $._id),
          ".",
          field("name", $._id),
        ),
        seq(field("table", $._id), ".", field("name", $._id)),
        field("name", $._id),
      ),

    binary_expression: ($) =>
      choice(
        // %left OR
        prec.left(PREC.OR, seq(
          field("left", $._expression),
          field("operator", alias(kw("or"), "OR")),
          field("right", $._expression),
        )),
        // %left AND
        prec.left(PREC.AND, seq(
          field("left", $._expression),
          field("operator", alias(kw("and"), "AND")),
          field("right", $._expression),
        )),
        // %left IS MATCH LIKE_KW BETWEEN IN ISNULL NOTNULL NE EQ
        // The IS-binary form (`x IS y`) is handled by is_expression
        // below as a separate rule because of `IS NOT`/`IS NOT
        // DISTINCT FROM` extensions.
        ...["=", "==", "!=", "<>"].map((op) =>
          prec.left(PREC.COMPARE, seq(
            field("left", $._expression),
            field("operator", op),
            field("right", $._expression),
          ))
        ),
        prec.left(PREC.COMPARE, seq(
          field("left", $._expression),
          optional(alias(kw("not"), "NOT")),
          field("operator", alias(kw("match"), "MATCH")),
          field("right", $._expression),
        )),
        // %left GT LE LT GE
        ...["<", "<=", ">", ">="].map((op) =>
          prec.left(PREC.ORDER, seq(
            field("left", $._expression),
            field("operator", op),
            field("right", $._expression),
          ))
        ),
        // %left BITAND BITOR LSHIFT RSHIFT
        ...["&", "|", "<<", ">>"].map((op) =>
          prec.left(PREC.BITWISE, seq(
            field("left", $._expression),
            field("operator", op),
            field("right", $._expression),
          ))
        ),
        // %left PLUS MINUS
        ...["+", "-"].map((op) =>
          prec.left(PREC.ADD, seq(
            field("left", $._expression),
            field("operator", op),
            field("right", $._expression),
          ))
        ),
        // %left STAR SLASH REM
        ...["*", "/", "%"].map((op) =>
          prec.left(PREC.MUL, seq(
            field("left", $._expression),
            field("operator", op),
            field("right", $._expression),
          ))
        ),
        // %left CONCAT PTR
        // PTR is sqlite's `->` and `->>` (JSON path access),
        // line 1379 of parse.y.
        ...["||", "->", "->>"].map((op) =>
          prec.left(PREC.CONCAT, seq(
            field("left", $._expression),
            field("operator", op),
            field("right", $._expression),
          ))
        ),
      ),

    // expr COLLATE name — postfix, %left COLLATE.
    // parse.y line 1163.
    identifier: ($) => /[A-Za-z_-￿][A-Za-z0-9_$-￿]*/,

    // sqlite accepts a quoted identifier in three forms (per tokenize.c
    // sqlite3GetToken): "..." (ANSI delimited), `...` (MySQL-compat),
    // [...] (T-SQL-compat).
    _id: ($) => choice(
      $.identifier,
      $.quoted_identifier,
      prec(-1, alias(kw("true"), $.identifier)),
      prec(-1, alias(kw("false"), $.identifier)),
      // WINDOW and OVER are used as table/column/alias names in
      // window6.test corpus — `SELECT sum(over) OVER over WINDOW
      // over AS (...)` etc.
      prec(-1, alias(kw("window"), $.identifier)),
      prec(-1, alias(kw("over"), $.identifier)),
      // RECURSIVE is in parse.y's %fallback list — `WITH recursive
      // AS (SELECT 1) SELECT * FROM recursive` is valid (sqlite
      // distinguishes CTE-name `recursive` from the WITH RECURSIVE
      // flag via lookahead).
      prec(-1, alias(kw("recursive"), $.identifier)),
      // String-as-identifier fallback for positions like
      // `CREATE TABLE 'foo'(...)` where only an identifier is
      // grammatically valid; expression contexts prefer string_literal.
      prec(-1, $.string_literal),
    ),

    // sqlite tokenize.c: numeric literals allow `_` only between
    // digits (single underscore as a thousands separator). Forms like
    // `123__456` (consecutive underscores) or `0xFFEF_` (trailing
    // underscore) are rejected by sqlite. Pattern `[d](_?[d])*` —
    // optional underscore followed by digit, repeated.
    numeric_literal: ($) =>
      choice(
        token(seq(
          choice("0x", "0X"),
          /[0-9a-fA-F](?:_?[0-9a-fA-F])*/,
        )),
        token(seq(
          choice(
            seq(
              /[0-9](?:_?[0-9])*/,
              optional(seq(".", optional(/[0-9](?:_?[0-9])*/))),
            ),
            seq(".", /[0-9](?:_?[0-9])*/),
          ),
          optional(seq(
            choice("e", "E"),
            optional(choice("+", "-")),
            /[0-9](?:_?[0-9])*/,
          )),
        )),
      ),
