test/corpus/delete.txt
==============================================
delete: bare from
==============================================

DELETE FROM users;

---

(source_file
  (delete_statement
    target: (qualified_table_name
      name: (identifier))))

==============================================
delete: with where
==============================================

DELETE FROM users WHERE id = 1;

---

(source_file
  (delete_statement
    target: (qualified_table_name
      name: (identifier))
    where: (where_clause
      (binary_expression
        left: (column_reference
          name: (identifier))
        right: (numeric_literal)))))

==============================================
delete: schema-qualified target
==============================================

DELETE FROM main.users WHERE id = 1;

---

(source_file
  (delete_statement
    target: (qualified_table_name
      schema: (identifier)
      name: (identifier))
    where: (where_clause
      (binary_expression
        left: (column_reference
          name: (identifier))
        right: (numeric_literal)))))

==============================================
delete: with order by and limit
==============================================

DELETE FROM users WHERE id > 0 ORDER BY id LIMIT 10;

---

(source_file
  (delete_statement
    target: (qualified_table_name
      name: (identifier))
    where: (where_clause
      (binary_expression
        left: (column_reference
          name: (identifier))
        right: (numeric_literal)))
    order_by: (order_by_clause
      (order_term
        (column_reference
          name: (identifier))))
    limit: (limit_clause
      (numeric_literal))))

==============================================
delete: indexed by
==============================================

DELETE FROM users INDEXED BY idx_id WHERE id = 1;

---

(source_file
  (delete_statement
    target: (qualified_table_name
      name: (identifier))
    (identifier)
    where: (where_clause
      (binary_expression
        left: (column_reference
          name: (identifier))
        right: (numeric_literal)))))

==============================================
delete: not indexed
==============================================

DELETE FROM users NOT INDEXED WHERE id = 1;

---

(source_file
  (delete_statement
    target: (qualified_table_name
      name: (identifier))
    where: (where_clause
      (binary_expression
        left: (column_reference
          name: (identifier))
        right: (numeric_literal)))))

==============================================
delete: limit with offset
==============================================

DELETE FROM users LIMIT 5 OFFSET 10;

---

(source_file
  (delete_statement
    target: (qualified_table_name
      name: (identifier))
    limit: (limit_clause
      (numeric_literal)
      (numeric_literal))))

==============================================
delete: case-insensitive keywords
==============================================

delete from users where id = 1;

---

(source_file
  (delete_statement
    target: (qualified_table_name
      name: (identifier))
    where: (where_clause
      (binary_expression
        left: (column_reference
          name: (identifier))
        right: (numeric_literal)))))
